# student-sections-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_students_sections_tables.py
app/: logger.py  main.py  seed_demo_data.py
app/api/: dependency.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  sections.py  students.py
app/core/: __init__.py  config.py  exceptions.py  middleware.py  security.py
app/db/: __init__.py  init_db.py  session.py
app/models/: __init__.py  base.py  role.py  section.py  student.py  student_section.py  user.py
app/repositories/: __init__.py  base.py  role_repository.py  section_repository.py  student_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  common.py  role.py  section.py  student.py  user.py
app/services/: __init__.py  auth_service.py  section_service.py  student_service.py
tests/: test_sections.py
