[project]
name = "student-sections-api"
version = "0.1.0"
description = "Student Sections Management REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "isort>=7.0.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "black==24.10.0",
    "ruff==0.7.0",
    "mypy==1.13.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app"]
known_first_party = [
    "app",
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
use_parentheses = true
skip = [".venv/", "migrations", ".history"]
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.vulture]
exclude = ["*file*.py", "app/appi/v1/"]
ignore_decorators = ["@app.route", "@require_*"]
make_whitelist = true
min_confidence = 60
paths = ["app", "whitelist.py"]
sort_by_size = true
verbose = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
